# doc-drift-guard

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: action.yml
.github/workflows/: ci.yml
src/doc_drift_guard/: cli.py
src/doc_drift_guard/analyzer/: imports.py  resolver.py
src/doc_drift_guard/parser/: markdown.py  python.py
tests/: test_analyzer.py  test_e2e.py  test_parser.py
tests/fixtures/: drift_readme.md  mixed_imports.md  mixed_imports_drift.md  valid_readme.md
tests/fixtures/sample_src/: example.py
