[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-drift-guard"
version = "0.1.0"
description = "Static analysis tool to detect outdated code examples in documentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["documentation", "linter", "drift", "markdown", "code-examples", "static-analysis"]
authors = [{name = "nulone"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = ["click>=8.0", "rich>=13.0"]

[project.urls]
Homepage = "https://github.com/nulone/doc-drift-guard"
Repository = "https://github.com/nulone/doc-drift-guard"
Issues = "https://github.com/nulone/doc-drift-guard/issues"
Changelog = "https://github.com/nulone/doc-drift-guard/releases"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "pyright>=1.1"]

[project.scripts]
ddg = "doc_drift_guard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
